# type

./: .gitignore  .gitmodules  Makefile.in  README.md  aclocal.m4  configure.ac  meson.build  pkgIndex.tcl.in  suppressions  tclconfig
.github/workflows/: release.yml
bench/: run.tcl  sha1.bench
doc/: meson.build  objtype.md  objtype.md.in  objtype.n  type.md.in
generic/: names.c  tclstuff.h  tip445.h  type.c
subprojects/: libtommath.wrap  tcl.wrap
tests/: define.test  ensemble.test  get.test  with.test
win/: makefile.vc
